[package]
name = "ensoulment"
version = "1.0.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MPL-2.0"
description = "Ensoulment is a simple rust crate that tells you when a program was compiled."
repository = "https://github.com/Lucretiel/lazy_format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.13", default-features = false }
lazy_static = "1.4.0"

[build-dependencies]
chrono = "0.4.13"
